--- a/css/style.css
+++ b/css/style.css
@@ -2567,6 +2567,10 @@ body._lock {
   bottom: 0;
 }
 
+.goods-main__slide.swiper-slide-active .goods-main__image::after {
+  opacity: 0;
+}
+
 .goods-main__slide.swiper-slide-active .goods-main__desc {
   animation: descMin 0.7s linear forwards;
 }
@@ -2597,6 +2601,10 @@ body._lock {
   bottom: 0;
 }
 
+.goods-main__item:hover .goods-main__image::after {
+  opacity: 0;
+}
+
 .goods-main__item:hover .goods-main__desc {
   animation: descMin 0.7s ease forwards;
 }
@@ -2614,6 +2622,17 @@ body._lock {
   position: absolute;
   transition: all 0.7s ease;
   background: url("../img/loading.gif") 50% no-repeat;
+}
+
+.goods-main__image::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(17, 34, 65, 0.6);
+  transition: all 0.7s ease;
 }
 
 .goods-main__image img {
@@ -2640,7 +2659,7 @@ body._lock {
   justify-content: center;
   text-align: center;
   padding: 10px;
-  background: rgba(17, 34, 65, 0.6);
+  background: transparent;
   animation: descMax 0.7s ease forwards;
 }
 
@@ -3049,7 +3068,6 @@ body._lock {
 @keyframes descMin {
   0% {
     opacity: 1;
-    transform: scale(1);
     left: 16px;
     right: 16px;
     top: 16px;
@@ -3058,13 +3076,12 @@ body._lock {
     line-height: 1.3;
     justify-content: center;
     text-align: center;
-    background: rgba(17, 34, 65, 0.6);
+    background: transparent;
     padding-right: 10px;
   }
 
   50% {
     opacity: 0;
-    transform: scale(1.2);
     left: 16px;
     right: 16px;
     top: 16px;
@@ -3073,11 +3090,11 @@ body._lock {
     line-height: 1.3;
     justify-content: center;
     text-align: center;
-    background: rgba(17, 34, 65, 0.6);
-    padding-right: 34px;
+    background: transparent;
+    padding-right: 10px;
   }
 
-  55% {
+  51% {
     background: rgba(34, 34, 34, 0.5);
     font-size: 1.5rem;
     font-weight: 500;
@@ -3088,7 +3105,6 @@ body._lock {
     justify-content: flex-start;
     text-align: left;
     opacity: 0;
-    transform: scale(1);
     padding-right: 34px;
   }
 
@@ -3103,7 +3119,6 @@ body._lock {
     justify-content: flex-start;
     text-align: left;
     opacity: 1;
-    transform: scale(1);
     opacity: 1;
     padding-right: 34px;
   }
@@ -3121,12 +3136,10 @@ body._lock {
     justify-content: flex-start;
     text-align: left;
     opacity: 1;
-    transform: scale(1);
-    opacity: 1;
     visibility: visible;
   }
 
-  45% {
+  50% {
     background: rgba(34, 34, 34, 0.5);
     font-size: 1.5rem;
     font-weight: 500;
@@ -3138,13 +3151,11 @@ body._lock {
     text-align: left;
     opacity: 0;
     visibility: hidden;
-    transform: scale(1.2);
   }
 
-  50% {
+  51% {
     opacity: 0;
     visibility: hidden;
-    transform: scale(1.2);
     left: 16px;
     right: 16px;
     top: 16px;
@@ -3153,13 +3164,12 @@ body._lock {
     line-height: 1.3;
     justify-content: center;
     text-align: center;
-    background: rgba(17, 34, 65, 0.6);
+    background: transparent;
   }
 
   100% {
     opacity: 1;
     visibility: visible;
-    transform: scale(1);
     left: 16px;
     right: 16px;
     top: 16px;
@@ -3168,7 +3178,7 @@ body._lock {
     line-height: 1.3;
     justify-content: center;
     text-align: center;
-    background: rgba(17, 34, 65, 0.6);
+    background: transparent;
   }
 }
 
