--- a/css/style.css
+++ b/css/style.css
@@ -1796,6 +1796,9 @@ body._lock {
 
 .viewer {
   position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .viewer__close {
@@ -6057,13 +6060,17 @@ body._lock {
     font-size: calc(0.75rem + 4 * (100vw - 20rem) / 1600);
   }
 
+  .about-product__title {
+    font-size: calc(1.0625rem + 3 * (100vw - 20rem) / 1600);
+  }
+
   .about-product__brand {
     font-size: calc(0.875rem + 6 * (100vw - 20rem) / 1600);
     margin-bottom: calc(16px + 16 * (100vw - 320px) / 1600);
   }
 
   .about-product__sizes {
-    font-size: calc(0.8125rem + 3 * (100vw - 20rem) / 1600);
+    font-size: calc(0.875rem + 2 * (100vw - 20rem) / 1600);
     margin-bottom: calc(12px + 12 * (100vw - 320px) / 1600);
   }
 
@@ -6072,19 +6079,20 @@ body._lock {
   }
 
   .about-product__colors {
-    font-size: calc(0.8125rem + 3 * (100vw - 20rem) / 1600);
+    font-size: calc(0.875rem + 2 * (100vw - 20rem) / 1600);
   }
 
   .about-product__note {
-    font-size: calc(0.75rem + 2 * (100vw - 20rem) / 1600);
+    font-size: calc(0.8125rem + 1 * (100vw - 20rem) / 1600);
+    padding: 8px calc(6px + 6 * (100vw - 320px) / 1600);
   }
 
   .prices-product__new {
-    font-size: calc(1.0625rem + 5 * (100vw - 20rem) / 1600);
+    font-size: calc(1.125rem + 4 * (100vw - 20rem) / 1600);
   }
 
   .prices-product__old {
-    font-size: calc(0.9375rem + 3 * (100vw - 20rem) / 1600);
+    font-size: calc(1rem + 2 * (100vw - 20rem) / 1600);
   }
 
   .shops__title {
