--- a/css/style.css
+++ b/css/style.css
@@ -1645,6 +1645,90 @@ body._lock {
   border: 1px solid var(--black);
 }
 
+.dialog-filter {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+  z-index: 10;
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.3s linear;
+}
+
+.dialog-filter.active {
+  opacity: 1;
+  visibility: visible;
+}
+
+.dialog-filter__container {
+  height: 100%;
+  position: relative;
+}
+
+.dialog-filter__body {
+  width: 250px;
+  padding: 24px;
+  border-radius: 5px;
+  background: var(--blue);
+  position: absolute;
+  top: 50%;
+  left: 360px;
+  transform: translate(0, -50%);
+  pointer-events: all;
+}
+
+.dialog-filter__body::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  right: 100%;
+  transform: translate(0, -50%);
+  border-right: 10px solid var(--blue);
+  border-bottom: 10px solid transparent;
+  border-top: 10px solid transparent;
+}
+
+.dialog-filter__message {
+  color: #FFF;
+  font-family: "Manrope", sans-serif;
+  font-weight: 700;
+  margin-bottom: 32px;
+}
+
+.dialog-filter__btns {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+}
+
+.dialog-filter__apply {
+  flex: 1 1 45%;
+  color: #212121;
+  font-family: "Manrope", sans-serif;
+  font-weight: 500;
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 5px;
+  border: 1px solid rgba(33, 33, 33, 0.1);
+  background: #FFF;
+}
+
+.dialog-filter__cancel {
+  flex: 1 1 45%;
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #FFF;
+  font-family: "Manrope", sans-serif;
+  font-weight: 500;
+}
+
 .range {
   --range-height: 4px;
   --thumb-width: 16px;
@@ -6583,6 +6667,34 @@ body._lock {
   .filter__body::-webkit-scrollbar {
     width: 0;
     height: 0;
+  }
+
+  .dialog-filter {
+    position: relative;
+    height: unset;
+  }
+
+  .dialog-filter__container {
+    height: unset;
+  }
+
+  .dialog-filter__body {
+    position: relative;
+    top: 0;
+    left: 0;
+    transform: translate(0, 0);
+    margin: 0 auto;
+  }
+
+  .dialog-filter__body::before {
+    top: unset;
+    bottom: 100%;
+    right: 50%;
+    transform: translate(50%, 0);
+    border-bottom: 10px solid var(--blue);
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
+    border-top: none;
   }
 
   .header__search-icon {
